--- a/style.css
+++ b/style.css
@@ -131,14 +131,18 @@ body {
 .nav-bar .follow-button {
   height: 36px;
   width: 80px;
-  background-color: var(--white);
-  color: var(--grey2);
-  border-radius: 18px;
+  background-color: rgba(0,0,0,0);
+  border:1px solid var(--white);
+  color:var(--white);
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 18px;
 }
 .follow-button.active {
+  background-color: var(--white);
+  color: var(--grey2);
+
 }
 .swiper-wrapper {
   overscroll-behavior: none;
@@ -240,7 +244,7 @@ body {
 .divider {
   width: 100%;
   height: 16px;
-  border-top: 1px solid var(--grey2);
+  border-top: 1px solid var(--lightGrey1);
 }
 .content {
   color: var(--grey1);
